...

          <View style={styles.buttonContainer}>
            <TouchableOpacity
              style={styles.button}
              onPress={onConfirm}
              activeOpacity={0.7}
              testID="confirm-create-room-button"
            >
              <ButtonLabel style={styles.buttonText}>{t('roomCreate.yes')}</ButtonLabel>
            </TouchableOpacity>

            <TouchableOpacity
              style={styles.button}
...
