...
                style={styles.input}
                value={character.name}
                onChangeText={(text) =>
                  setCharacter({ ...character, name: text })
                }
                placeholderTextColor="#888686"
                testID="character-name-input"
              />
            </View>

            {/* Gender Selection */}
            {!hideGender && <View style={styles.fieldRow}>
              <Text style={styles.fieldLabel}>{t('character.gender')}</Text>
...
